--- a/stylesheets/scss/moovui/globals/_header.scss
+++ b/stylesheets/scss/moovui/globals/_header.scss
@@ -8,9 +8,6 @@
   width: 100%;
   height: $nav-height;
   z-index: 101;
-  &.affix {
-    position: fixed;
-  }
   > .content {
     position: relative;
   }
@@ -60,4 +57,8 @@
     margin: 0 24px 0 0;
   }
 }
+}
+
+#header.#{$moovui-prefix}affix {
+  position: fixed;
 }
