--- a/stylesheets/scss/moovui/modules/_syntax-highlighter.scss
+++ b/stylesheets/scss/moovui/modules/_syntax-highlighter.scss
@@ -27,6 +27,9 @@
     top: 0;
     text-transform: uppercase;
   }
+  table, tbody, tr, td {
+    display: block;
+  }
   table {
     background: none;
     margin: 0;
@@ -43,6 +46,7 @@
   }
   .container {
     @include border-radius(0 0 $radius 0);
+    display: inline-block;
     padding: $sp;
   }
   .gutter {
@@ -55,6 +59,7 @@
     width: 35px;
   }
   .code {
+    overflow: auto;
     padding: 0;
     width: 100%;
   }
