--- a/stylesheets/scss/moovui/modules/_tabs.scss
+++ b/stylesheets/scss/moovui/modules/_tabs.scss
@@ -14,6 +14,7 @@
         overflow: hidden;
         padding: 0;
         position: absolute;
+        max-width: 100%;
         height: 0;
       }
     }
