--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2036,8 +2036,8 @@ html.touch .tooltip { padding-right: 18px; }
 
 [data-ur-carousel-component="item"] { -webkit-transform: translate(0, 0); -webkit-user-drag: none; float: left; overflow: hidden; }
 
-[data-ur-carousel-component="dot"] { -webkit-border-radius: 4px; border-radius: 4px; background: #444; display: inline-block; margin: 0 5px; opacity: 0.8; width: 8px; height: 8px; }
-[data-ur-carousel-component="dot"][data-ur-state="inactive"] { opacity: 0.3; }
+[data-ur-carousel-component="dot"] { -webkit-border-radius: 4px; border-radius: 4px; background: #c7c7c7; display: inline-block; margin: 0 5px; width: 8px; height: 8px; }
+[data-ur-carousel-component="dot"][data-ur-state="active"] { background: #444; }
 
 [data-ur-carousel-component="button"][data-ur-state="disabled"]:not(.btn) { color: inherit; }
 
