--- a/_layouts/interactions.html
+++ b/_layouts/interactions.html
@@ -17,9 +17,9 @@
       {% if page.basic_tab %}
       <h2>Attributes</h2>
       <div class="tabs" data-ur-set="tabs">
-        <div data-ur-tabs-component="button" data-ur-tab-id="basic" data-ur-state="enabled">Basic</div>
-        <div data-ur-tabs-component="button" data-ur-tab-id="advanced">Advanced</div>
-        <div data-ur-tabs-component="button" data-ur-tab-id="js">JavaScript</div>
+        <a data-ur-tabs-component="button" data-ur-tab-id="basic" data-ur-state="enabled">Basic</a>
+        <a data-ur-tabs-component="button" data-ur-tab-id="advanced">Advanced</a>
+        <a data-ur-tabs-component="button" data-ur-tab-id="js">JavaScript</a>
         <div data-ur-tabs-component="content" data-ur-tab-id="basic" data-ur-state="enabled">
           <dl>
             {% for i in page.basic_tab %}
