--- a/stylesheets/scss/moovui/globals/_mixins.scss
+++ b/stylesheets/scss/moovui/globals/_mixins.scss
@@ -2,6 +2,10 @@
   @include prefixer(border-radius, $radius, webkit spec);
 }
 
+@mixin border-top-left-radius($radius) {
+  @include prefixer(border-top-left-radius, $radius, webkit spec);
+}
+
 @mixin radius {
   @include border-radius($radius);
 }
