--- a/stylesheets/scss/moovui/bourbon/_bourbon-deprecated-upcoming.scss
+++ b/stylesheets/scss/moovui/bourbon/_bourbon-deprecated-upcoming.scss
@@ -9,5 +9,5 @@
 
 @mixin background-size ($lengths...) {
   @include prefixer(background-size, $lengths, spec);
-  @warn "background-size is deprecated and will be removed in the next major version release";
+  //@warn "background-size is deprecated and will be removed in the next major version release";
 }
