--- a/examples/scss/drawer.scss
+++ b/examples/scss/drawer.scss
@@ -1,4 +1,5 @@
-@import "compass";
+@import "bourbon/_bourbon";
+@import "_bourbon_fix";
 #wrapper {
   display: -webkit-box !important;
   display: -webkit-flex !important;
